[package]
name = "ase_update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.octocrab]
version = "0.16"
[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread", "time"]
[dependencies.reqwest]
version = "0.11.10"
